# yrt-pet-readthedocs-test

./: .gitignore  .readthedocs.yaml  README.md
doc/: faq.md
doc/compilation/: building.md  code_architecture.md  git_workflow.md
doc/python/: owned_vs_alias.md
doc/usage/: histogram3d_format.md  image_parameters.md  list-mode_file.md  motion_file.md  rawd_file.md  scanner.md  sparse-histogram.md
src/: .clang-format  CMakeLists.txt
yrt-pet/: CMakeLists.txt  LICENSE.txt
yrt-pet/executables/: CMakeLists.txt  PluginOptionsHelper.cpp  PluginOptionsHelper.hpp
yrt-pet/executables/conversion/: ConvertToHistogram.cpp  ConvertToListModeLUT.cpp  CumulateHistograms.cpp  Histogram3DToListMode.cpp
yrt-pet/executables/kernel/: BuildK.cpp
yrt-pet/executables/motion/: PostReconMotionCorrection.cpp
yrt-pet/executables/recon/: Backproject.cpp  EstimateScatter.cpp  ForwardProject.cpp  PrepareAdditiveCorrection.cpp  Reconstruct.cpp
yrt-pet/executables/scatter/: PrepareAdditiveCorrection.cpp  PrepareScatterCorrection.cpp
yrt-pet/executables/utils/: AccumulateToDetectors.cpp
yrt-pet/include/datastruct/: IO.hpp  PluginFramework.hpp
yrt-pet/include/datastruct/fancyarray/: variadic_common.hpp
yrt-pet/include/datastruct/image/: Image.hpp  ImageBase.hpp  ImageDevice.cuh  ImageSpaceKernels.cuh
yrt-pet/include/datastruct/projection/: BinIterator.hpp  BinIteratorConstrained.hpp  Histogram.hpp  Histogram3D.hpp  LORMotion.hpp  LORsDevice.cuh  ListMode.hpp  ListModeLUT.hpp  ListModeLUTDOI.hpp  ProjectionData.hpp  ProjectionDataDevice.cuh  ProjectionList.hpp  ProjectionSpaceKernels.cuh  SparseHistogram.hpp  UniformHistogram.hpp
yrt-pet/include/datastruct/scanner/: DetCoord.hpp  DetRegular.hpp  DetectorSetup.hpp  Scanner.hpp  ScannerDevice.cuh
yrt-pet/include/geometry/: Constants.hpp  Cylinder.hpp  Line3D.hpp  Matrix.hpp  MultiRayGenerator.hpp  Plane.hpp  ProjectorUtils.hpp  TubeOfResponse.hpp  Vector3D.hpp
yrt-pet/include/kernel/: Kernel.hpp
yrt-pet/include/kinetic/: SRTM.hpp
yrt-pet/include/motion/: ImageWarperFunction.hpp  ImageWarperMatrix.hpp  ImageWarperTemplate.hpp
yrt-pet/include/operators/: DeviceSynchronized.cuh  Operator.hpp  OperatorDevice.cuh  OperatorProjector.hpp  OperatorProjectorBase.hpp  OperatorProjectorDD.hpp  OperatorProjectorDD_GPU.cuh  OperatorProjectorDD_GPUKernels.cuh  OperatorProjectorDevice.cuh  OperatorProjectorSiddon.hpp  OperatorProjectorSiddon_GPU.cuh  OperatorProjectorSiddon_GPUKernels.cuh  OperatorPsf.hpp  OperatorPsfDevice.cuh  ProjectionPsfManager.hpp  ProjectionPsfManagerDevice.cuh  ProjectionPsfUtils.cuh  SparseProjection.hpp  TimeOfFlight.hpp  Variable.hpp
yrt-pet/include/recon/: CUParameters.hpp  Corrector.hpp  Corrector_CPU.hpp  Corrector_GPU.cuh  OSEM.hpp  OSEMUpdater_CPU.hpp  OSEMUpdater_GPU.cuh  OSEM_CPU.hpp  OSEM_GPU.cuh  OSEM_cpu.hpp  OSEM_gpu.cuh
yrt-pet/include/scatter/: ScatterEstimator.hpp  SingleScatterSimulator.hpp
yrt-pet/include/utils/: Array.hpp  Assert.hpp  DeviceArray.cuh  FileReader.hpp  GPUKernelUtils.cuh  GPUMemory.cuh  GPUStream.cuh  GPUTypes.cuh  Globals.hpp  JSONUtils.hpp  PageLockedBuffer.cuh  ProgressDisplay.hpp  ProgressDisplayMultiThread.hpp  RangeList.hpp  ReconstructionUtils.hpp  Tools.hpp  Types.hpp  Utilities.hpp
yrt-pet/integration_tests/: CMakeLists.txt  helper.py  test_datastruct.py  test_recon.py
yrt-pet/plugins/: note.txt
yrt-pet/python/pyyrtpet/: _pyyrtpet.py
yrt-pet/src/: CMakeLists.txt  pybind11.cpp
yrt-pet/src/datastruct/: IO.cpp
yrt-pet/src/datastruct/image/: Image.cpp  ImageBase.cpp  ImageDevice.cu  ImageSpaceKernels.cu
yrt-pet/src/datastruct/image/nifti/: nifti1_io.cpp  znzlib.cpp
yrt-pet/src/datastruct/projection/: BinIterator.cpp  BinIteratorConstrained.cpp  Histogram.cpp  Histogram3D.cpp  LORMotion.cpp  LORsDevice.cu  ListMode.cpp  ListModeLUT.cpp  ListModeLUTDOI.cpp  ProjectionData.cpp  ProjectionDataDevice.cu  ProjectionList.cpp  ProjectionSpaceKernels.cu  SparseHistogram.cpp  UniformHistogram.cpp
yrt-pet/src/datastruct/scanner/: DetCoord.cpp  DetRegular.cpp  DetectorSetup.cpp  Scanner.cpp  ScannerDevice.cu
yrt-pet/src/geometry/: Cylinder.cpp  Line3D.cpp  Matrix.cpp  MultiRayGenerator.cpp  Plane.cpp  TubeOfResponse.cpp  Vector3D.cpp
yrt-pet/src/kernel/: Kernel.cpp
yrt-pet/src/kinetic/: SRTM.cpp
yrt-pet/src/motion/: ImageWarperFunction.cpp  ImageWarperMatrix.cpp  ImageWarperTemplate.cpp
yrt-pet/src/operators/: DeviceSynchronized.cu  Operator.cpp  OperatorDevice.cu  OperatorProjector.cpp  OperatorProjectorBase.cpp  OperatorProjectorDD.cpp  OperatorProjectorDD_GPU.cu  OperatorProjectorDD_GPUKernels.cu  OperatorProjectorDevice.cu  OperatorProjectorSiddon.cpp  OperatorProjectorSiddon_GPU.cu  OperatorProjectorSiddon_GPUKernels.cu  OperatorPsf.cpp  OperatorPsfDevice.cu  ProjectionPsfManager.cpp  ProjectionPsfManagerDevice.cu  SparseProjection.cpp  TimeOfFlight.cpp  Variable.cpp
yrt-pet/src/recon/: Corrector.cpp  Corrector_CPU.cpp  Corrector_GPU.cu  OSEM.cpp  OSEMUpdater_CPU.cpp  OSEMUpdater_GPU.cu  OSEM_CPU.cpp  OSEM_GPU.cu  Variable.cpp
yrt-pet/src/scatter/: Crystal.cpp  ScatterEstimator.cpp  SingleScatterSimulator.cpp
yrt-pet/src/utils/: Array.cpp  Assert.cpp  FileReader.cpp  GPUKernelUtils.cu  GPUUtils.cu  Globals.cpp  PageLockedBuffer.cu  ProgressDisplay.cpp  ProgressDisplayMultiThread.cpp  RangeList.cpp  ReconstructionUtils.cpp  Tools.cpp  Utilities.cpp
yrt-pet/unit_tests/: CMakeLists.txt  test_datastruct.py  test_utils.cpp  test_utils.hpp
yrt-pet/unit_tests/datastruct/: test_Array.cpp  test_CSV.cpp  test_Histogram3D.cpp  test_Image.cpp  test_ListMode.cpp  test_Scanner.cpp  test_SparseHistogram.cpp
yrt-pet/unit_tests/motion/: test_Warper.cpp
yrt-pet/unit_tests/operators/: test_DD.cpp  test_Siddon.cpp  test_Siddon_GPU.cu  test_SparseProjection.cpp  test_TimeOfFlight.cpp
yrt-pet/unit_tests/recon/: test_DD.cpp  test_Histogram3D.cpp  test_Image.cpp  test_ListMode.cpp  test_Scanner.cpp  test_Siddon.cpp  test_SparseHistogram.cpp  test_TimeOfFlight.cpp
yrt-pet/unit_tests/utils/: test_BinIterator.cpp  test_CUDA.cu  test_Utilities.cpp
(+310 files in other folders)
